--- a/forms_css_file.css
+++ b/forms_css_file.css
@@ -1,11 +1,11 @@
- body{background-image:linear-gradient(to right,red,yellow,red,yellow,red,yellow,red,yellow);}
-
+ body{background-color: aquamarine;
+ }
+ input:hover{
+         background-color:chartreuse;
+ }
         body{
             font-size:40%;
         }
-        pre {
+        body{
             font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-        input:focus{
-            background-color:linear-gradient(black,red);
         }
