--- a/css_try.css
+++ b/css_try.css
@@ -1,22 +1,17 @@
-<html>
-<head>
-<style>
-li {
-  display: inline;
+h1.hidden {
+  display: none;
 }
-</style>
-</head>
-<body>
-
-<p>Display a list of links as a horizontal menu:</p>
-
-<ul>
-  <li><a href="/html/default.asp" target="_blank">HTML</a></li>
-  <li><a href="/css/default.asp" target="_blank">CSS</a></li>
-  <li><a href="/js/default.asp" target="_blank">JavaScript</a></li>
-</ul>
-
-</body>
-</html>
 
 
+p{
+  background-color: antiquewhite;
+  width: 300px;
+  
+}
+
+.display{
+  display: none;
+}
+.display:hover{
+  color: bisque;
+  display: block;
